manager/templates/default/css/index.css
/**
 * MODX Revolution 2.0.0 CSS Stylesheet
 */
body, html {
    height: 100%;
    background-color: #fafafa;
}

.x-viewport {
    overflow:auto;
}

body {
    margin-bottom: 1px; /* avoid jumping scrollbars */
    color: #111;
    font: 13px/17px Arial, Helvetica, sans-serif;
}

img, a img {
    border: 0;
    text-decoration: none;
    padding: 0;
    margin: 0;
}

hr {
    color: #a1b7c4;
    background-color: #a1b7c4;
    height: 1px;
    border: 0;
    margin: 20px;
}

.aleft { text-align: left; }
.aright { text-align: right; }
.right { float: right; }
.left { float: left; }
.clear { clear: left; }
.bold { font-weight: bold; }
.not-installed { color: red; }
.red { color: red !important; }
.green { color: green !important; }
.error { color: red !important; }
.centered{ text-align: center; }
.wait{
	background: url("../images/style/wait.gif") no-repeat scroll center 55px transparent;
    color: #53595F;
    font-size: 15px;
    font-weight: bold;
    padding: 20px 10px 60px;
}

/* leftbar */
#modx-leftbar, #modx-content {
    position: absolute;
}

.modx-form p {
    padding-bottom: 10px;
}

#modx-leftbar .x-tab-panel-noborder {
	-moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    background: none repeat scroll 0 0 transparent;
    border: 0;
    margin: 5px 0 10px 10px;
    padding: 0;
}

#modx-leftbar .x-tab-panel-noborder .x-tab-panel-body-noborder {
    -moz-border-radius:0 0 2px 2px;
    -webkit-border-radius:0 0 2px 2px;
    border-radius:0 0 2px 2px;
    padding-bottom: 5px;
    background-color: #fbfbfb;
    border: 1px solid #999;
    border-top: 0;
}

#modx-leftbar .x-tab-strip-active{
    background-color: #fbfbfb !important;
    border-color: #999 !important;
}

#modx-leftbar ul.x-tab-strip-top span.x-tab-strip-text{}
#modx-leftbar ul.x-tab-strip-top li {
    -moz-border-radius-bottomleft: 0;
    -moz-border-radius-bottomright: 0;
    -webkit-border-bottom-left-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

#modx-leftbar .x-tab-panel-header-plain .x-tab-strip-spacer, .x-tab-panel-footer-plain .x-tab-strip-spacer  { 
	background-color: #fbfbfb;
    border: 1px solid #999;
    border-top: 0;
    border-bottom: 0;
}

#modx-leftbar .x-tree .x-panel-body{
    background-color:#EFEFEF;
    border-top:1px solid #FAFAFA;
}

#modx-leftbar .x-tree-root-ct {
    -moz-border-radius:0 0 3px 3px;
    -webkit-border-radius:0 0 3px 3px;
    border-radius:0 0 3px 3px;
	background-color: #fbfbfb;
    padding: 6px;
}

#modx-leftbar ul.x-tab-strip-top li {}

/* Collapse tree panel */
#modx-leftbar .x-layout-split-west .x-layout-mini {
    left:-5px;
    top:108px;
}

/* fix leftbar toolbar */
#modx-leftbar .x-btn{
	padding: 0;
}
#modx-leftbar .x-btn button {
	height: 20px !important;
	padding: 3px 9px 0 !important;
}

#modx-content {
    padding: 0 0 20px 15px;
    height: 100%;
    overflow: auto;
}

#modx-container {
    height: 100%;
    width: 100%;
    padding: 0;
    z-index: 9993;
    background: url(../images/restyle/contentArea_bg.png) repeat-x 100% 0 !important;
}

/* leftbar tabs */
#modx-leftbar .x-tab-panel-header-plain .x-tab-strip-top  {}
#modx-leftbar .x-tree .x-panel-body {
    background-color:#fbfbfb;
    border-color:#FAFAFA;
    border-right:0 none;
    border-style:solid none none;
    border-width:1px 0 0;
}
#modx-leftbar .x-tab-panel-body {
    background-color: transparent;
}
#modx-leftbar .x-panel-noborder .x-panel-tbar-noborder .x-toolbar {
    border-bottom: 0;
    padding:4px 5px 5px;
}
#modx-leftbar .x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text {
	color: #666666;
	text-shadow:0 1px 0 #FAFAFA;
}
#modx-leftbar .x-tab-panel-header-plain {
    padding: 0 !important;
}

#modx-leftbar-content {
    float: left;
    margin: 7px 0 7px 7px;
}
#modx-leftbar ul.x-tab-strip-top li:first-child {
    margin-left: 0 !important;
}
.modx-leftbar-panel {
    margin-top: 7px;
}

.modx-leftbar  .x-tab-panel-header-plain .x-tab-strip-spacer, .x-tab-panel-footer-plain .x-tab-strip-spacer{
    background-color: #EEEEEE;
    border: 1px solid #EEEEEE;
}

.modx-leftbar .x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text{
    color: #5e5e5e;
    text-shadow: none;
}

.modx-leftbar .x-tab-strip-wrap li {
    color: #fbfbfb;
}
.modx-leftbar .x-tool-toggle {
    width: 24px;
    height: 24px;
    float: right;
    z-index: 5;
    display: none;
}
.modx-tree .x-toolbar {
    background: #eee;
    border: 0;
}

.modx-leftbar .x-panel-body {
    background: transparent;
}

.modx-leftbar form.x-panel-body {
    background-color: #eee !important;
}

.modx-leftbar .x-tab-panel-body-top {
    -moz-border-radius-bottomleft: 3px;
    -moz-border-radius-bottomright: 3px;
    -webkit-border-bottom-left-radius: 3px;
    -webkit-border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
}
#modx-leftbar .x-tab-panel-header {
    background-color: transparent !important;
}
#modx-leftbar .x-tab-strip-spacer {
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 3px;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 3px;
    border-top-left-radius: 0;
    border-top-right-radius: 3px;
}

.modx-leftbar .x-tree-root-ct {
    -moz-border-radius-bottomleft: 3px;
    -moz-border-radius-bottomright: 3px;
    -webkit-border-bottom-left-radius: 3px;
    -webkit-border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    background-color: #eee;
    padding: 4px;
}
.modx-leftbar .x-panel-header-text,
.modx-leftbar .x-panel-animated .x-panel-header-text {
    margin-right: -10px !important;
    background: transparent url(../../images/restyle/i/bg-x-accordion-hd2.png) 100% 0 !important;
    display: block;
    line-height: 32px;
}
.modx-leftbar .x-panel .x-panel-animated div.x-panel-header {
    overflow: visible !important;
}
/* ... */

